force-app/main/default/objects/Charket__WeChatAgentStatus__c/Charket__WeChatAgentStatus__c.object-meta.xml
<CustomObject>
    <label>WeChat Agent Status</label>
    <nameField>
        <label>WeChat Agent Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WeChat Agent Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>