force-app/main/default/objects/Charket__WeChatAgentStatus__c/fields/Charket__IsAcceptsChats__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsAcceptsChats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepts Chats</label>
    <type>Checkbox</type>
</CustomField>