force-app/main/default/objects/Charket__WeChatAgentStatus__c/fields/Charket__IsActive__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>