force-app/main/default/objects/Charket__WeChatAgentStatus__c/fields/Charket__IsNonoverridableBySystem__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsNonoverridableBySystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nonoverridable By System</label>
    <type>Checkbox</type>
</CustomField>