force-app/main/default/objects/Charket__WeChatAgentStatus__c/fields/Charket__IsOfflineDefaultStatus__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsOfflineDefaultStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Default Status</label>
    <type>Checkbox</type>
</CustomField>